# MeshSyncDCCPlugins

./: .gitattributes  .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  License.md  Readme.md  Readme_JP.md  Readme_index.md  Third Party Notices.md  package.json  temp.md
.yamato/: MeshSyncDCCPlugins-pack.yml  (+7 more)
Editor/: Plugins~  (+1 more)
Plugins~/: CMakeLists.txt
Plugins~/DCCScripts/Blender/: DepsgraphUpdate.py  MeshSyncDebug.py
Plugins~/Docs/en/: BuildDCCPlugins.md  CreateSymbolicLinksOnWindows10.md  Installation.md  MakeOptionalArguments.md  SetupDCC.md
Plugins~/Docs/jp/: Installation.md  SceneCache.md
Plugins~/Licenses/: generate_licenses.py
Plugins~/Licenses/blender/: LICENSE.txt
Plugins~/Src/: MeshSync.vcxproj  MeshSync.vcxproj.filters  MeshSyncClient3dsMax.vcxproj  MeshSyncClientBlender.vcxproj.filters  MeshSyncClientMQ3.vcxproj  MeshSyncClientMQ3.vcxproj.filters  MeshSyncClientMQ4.vcxproj  MeshSyncClientMaya.vcxproj.filters  MeshSyncClientModo.vcxproj  MeshSyncClientModo.vcxproj.filters  MeshSyncClientMotionBuilder.vcxproj.filters  MeshSync_3dsMax.sln  MeshSync_All.bat  MeshSync_All.sln  MeshSync_Blender.sln  MeshSync_Maya.bat  MeshSync_Maya.sln  MeshSync_MayaLT.bat  MeshSync_Metasequoia.bat  MeshSync_Metasequoia.sln  MeshSync_Modo.bat  MeshSync_Modo.sln  MeshSync_MotionBuilder.sln  MeshSync_Test.sln  MeshUtils.vcxproj  MeshUtils.vcxproj.filters  build_core.bat  build_max.bat  build_modo.bat  build_motionbuilder.bat  mscore.vcxproj.filters  setup.bat  setup.vcxproj  toolchain.bat
Plugins~/Src/MeshSyncClient/: AsyncTasksController.cpp  BaseSyncSettings.cpp  CMakeLists.txt  PathUtility.cpp  SceneCacheUtility.cpp  SettingsUtilities.cpp  SettingsUtility.cpp  msEntityManager.cpp  msInstancesManager.cpp  msMaterialManager.cpp  msPropertyManager.cpp  msTextureManager.cpp  pch.h
Plugins~/Src/MeshSyncClient/Include/MeshSyncClient/: AsyncTasksController.h  BaseCacheSettings.h  BaseSyncSettings.h  ExportTarget.h  FrameRange.h  MaterialFrameRange.h  MeshSyncClientConstants.h  MeshSyncClientMacros.h  ObjectScope.h  PathUtility.h  SceneCacheUtility.h  SettingsUtilities.h  SettingsUtility.h  msBaseSyncSettings.h  msEntityManager.h  msITransformManager.h  msInstancesManager.h  msMaterialFrameRange.h  msPropertyManager.h  msTextureManager.h  msTransformManager.h
Plugins~/Src/MeshSyncClient3dsMax/: CMakeLists.txt  MaxCacheSettings.h  MaxSyncSettings.cpp  MaxSyncSettings.h  MeshSyncClient3dsMax.cpp  msmaxContext.cpp  msmaxContext.h  msmaxUI.cpp  msmaxUtils.cpp  msmaxUtils.h
Plugins~/Src/MeshSyncClientBlender/: BlenderCacheSettings.h  BlenderSyncSettings.cpp  BlenderSyncSettings.h  BlenderUtility.cpp  BlenderUtility.h  CMakeLists.txt  MeshSyncClientBlender.cpp  msblenBinder.cpp  msblenBinder.h  msblenContext.cpp  msblenContext.h  msblenContextDefaultPathProvider.cpp  msblenContextDefaultPathProvider.h  msblenContextGeometryNodes.cpp  msblenContextInstanceChildPathProvider.cpp  msblenContextInstanceChildPathProvider.h  msblenContextIntermediatePathProvider.cpp  msblenContextIntermediatePathProvider.h  msblenContextPathProvider.h  msblenContextState.cpp  msblenContextState.h  msblenCurveHandler.cpp  msblenCurveHandler.h  msblenEntityHandler.cpp  msblenEntityHandler.h  msblenGeometryNodeUtils.h  msblenGeometryNodes.cpp  msblenGeometryNodes.h  msblenGeometryNodesUtils.cpp  msblenGeometryNodesUtils.h  msblenMacros.h  msblenMaterialsExportHelper.cpp  msblenMaterialsExportHelper.h  msblenModifiers.cpp  msblenModifiers.h  msblenUtils.cpp  msblenUtils.h  pch.h
Plugins~/Src/MeshSyncClientBlender/BlenderPyObjects/: BlenderPyCommon.h  BlenderPyContext.cpp  BlenderPyContext.h  BlenderPyDepsgraph.cpp  BlenderPyDepsgraph.h  BlenderPyDepsgraphObjectInstance.cpp  BlenderPyDepsgraphObjectInstance.h  BlenderPyDepsgraphUpdate.cpp  BlenderPyDepsgraphUpdate.h  BlenderPyID.cpp  BlenderPyID.h  BlenderPyImage.cpp  BlenderPyImage.h  BlenderPyNodeTree.cpp  BlenderPyNodeTree.h  BlenderPyScene.cpp  BlenderPyScene.h
Plugins~/Src/MeshSyncClientBlender/BlenderSrc/: customdata.cpp  material.cpp
Plugins~/Src/MeshSyncClientBlender/python/: unity_mesh_sync_baking.py  unity_mesh_sync_common.py  unity_mesh_sync_installation.py  unity_mesh_sync_materials.py  unity_mesh_sync_preferences.py  unity_mesh_sync_scene_cache.py
Plugins~/Src/MeshSyncClientBlender/python/2.79/: unity_mesh_sync.py
Plugins~/Src/MeshSyncClientBlender/python/2.80/: unity_mesh_sync.py
Plugins~/Src/MeshSyncClientBlender/python/2.81/: unity_mesh_sync.py
Plugins~/Src/MeshSyncClientBlender/python/2.82/: unity_mesh_sync.py
Plugins~/Src/MeshSyncClientBlender/python/2.83.10/: unity_mesh_sync.py
Plugins~/Src/MeshSyncClientBlender/python/2.83.16/: unity_mesh_sync.py
Plugins~/Src/MeshSyncClientBlender/resources/: EditorServerSettings.yml
Plugins~/Src/MeshSyncClientMQ/: CMakeLists.txt  MQCacheSettings.h  MeshSyncClientMQ4.cpp  msmqContext.cpp  msmqContext.h  msmqUI4.cpp  msmqUtils.cpp  msmqUtils.h
Plugins~/Src/MeshSyncClientMaya/: CMakeLists.txt  MayaCacheSettings.h  MayaSyncSettings.cpp  MayaSyncSettings.h  MeshSyncClientMaya.cpp  msmayaCommand.cpp  msmayaContext.cpp  msmayaContext.h  msmayaUtils.cpp  msmayaUtils.h  pch.h
Plugins~/Src/MeshSyncClientMaya/etc/: UnityMeshSync.mod
Plugins~/Src/MeshSyncClientModo/: CMakeLists.txt  ModoCacheSettings.h  ModoSyncSettings.cpp  ModoSyncSettings.h  msmodoCommand.cpp  msmodoContext.cpp  msmodoContext.h  msmodoInterface.cpp  msmodoUtils.cpp  msmodoUtils.h  msmodoWidget.cpp  pch.h
Plugins~/Src/MeshSyncClientModo/tool/: make_import_library.bat  moc.bat
Plugins~/Src/MeshSyncClientMotionBuilder/: CMakeLists.txt  msmobuDevice.cpp  msmobuDevice.h  msmobuLayout.cpp  msmobuUtils.cpp  msmobuUtils.h
Plugins~/TestAssets/Test scenes/: bake_test_1.blend  nested_instances_test.blend
Src/MeshSyncClientMQ/: CMakeLists.txt
Src/MeshSyncClientMaya/: CMakeLists.txt  msmayaCommand.cpp  msmayaContext.cpp  pch.h
Src/MeshSyncClientMaya/LT/2018/: make_import_library.bat
Src/MeshSyncClientMaya/MEL/: UnityMeshSync.mod
Src/MeshSyncClientMaya/scripts/: UnityMeshSync_Cache.mel
(+85 files in other folders)
